Let the incognito window print.

Provide the original profile to incognito so that users can still use
their printers.

BUG=678796

Review-Url: https://codereview.chromium.org/2610373003
Cr-Commit-Position: refs/heads/master@{#441812}

Former-commit-id: 27494ab927ec654ef673ea335e6406518d4216aa